--- a/server/pom.xml
+++ b/server/pom.xml
@@ -50,6 +50,11 @@
             <version>1.16.8</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.23</version>
+        </dependency>
     </dependencies>
 
     <build>
